# muttas-personel

./: .gitignore  .replit  CLAUDE.md  PDKS_Entegrasyon_Dokumani.txt  auth.py  ayarlar.py  basvurular.py  dashboard.py  db.py  faturalar.py  gunluk.py  ihtiyac_talebi.py  izinler.py  koordinasyon_sorumlulari.txt  main.py  mentese_islem_raporu.html  mentese_kullanici_bilgileri.docx  muttas_islem_raporu.html  pdks.py  pdks_agent.py  pdks_kur.bat  permissions.py  personel.py  personel_app.py  personel_data.sql  personel_export.csv  pyproject.toml  replit.md  requirements.txt  satin_alma.py  schema.sql  self_servis.py  setup_db.py  tekneler.py  vekalet.py
.agents/: agent_assets_metadata.toml
migrations/personel-sync-2026-05/: 01_tc_ekle_isim_normalize.sql  02_isim_guncelleme.sql  03_yeni_personel_ekle.sql  README.md
mobile/: app.json  package-lock.json  package.json
mobile/.expo/types/: router.d.ts
mobile/app/: _layout.tsx
mobile/app/(auth)/: login.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  izin-talebi.tsx  izinlerim.tsx  onaylar.tsx  profil.tsx
mobile/components/: ErrorBoundary.tsx
mobile/lib/: api.ts  auth.tsx
scripts/: import_izinler.py
static/: basvuru.html  dashboard.html  index.html  izin-basvuru.html  login.html  muttas_islem_raporu.html  personel_detay.html  updates2.sql
